remove /submission
